@@ -1,4 +1,5 @@
 2006-11-12  Don Allingham  <don@gramps-project.org>
+	* src/Viewmanager.py: prompt before abandoning changes
 	* src/GrampsDb/_WriteGedcom.py: RepoRefs don't have a privacy flag
 
 2006-11-11  Don Allingham  <don@gramps-project.org>
